fix(integrated-schedule): 승인 대기 드롭 차단·캘린더 일정 드래그 잠금
- 가예약·사이드바 스케줄 허용: ACTIVE만 (DEPOSIT_PENDING 제외), 백엔드 검증 동일
- 통합 스케줄(onDropFromExternal): 기존 fc 이벤트 editable/eventDrop 비활성, 외부 드롭 유지
- 드롭 가드·ScheduleModal 안내·단위 테스트 정합

Co-authored-by: Cursor <cursoragent@cursor.com>